# grid-fed-rl-gym

./: .editorconfig  .pre-commit-config.yaml  API_REFERENCE.md  API_REFERENCE_COMPLETE.md  ARCHITECTURE.md  AUTONOMOUS_ENHANCEMENT_SUMMARY.md  AUTONOMOUS_SDLC_COMPLETION_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  EXAMPLES.md  FINAL_AUTONOMOUS_COMPLETION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ENHANCEMENT_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RESEARCH_IMPLEMENTATION_SUMMARY.md  RESEARCH_OPPORTUNITIES.md  SECURITY.md  TUTORIALS.md  autonomous_execution_report.json  benchmark_results.db  debug_action_validation.py  deployment_config.yaml  docker-compose.production.yml  docker-compose.yml  production_readiness_report.json  pyproject.toml  quality_gates_report.json  requirements-dev.txt  requirements.txt  setup.py  test_autonomous_enhancements.py  test_autonomous_quality_gates.py  (+27 more)
deployment/: monitoring_stack.yaml  production_config.yaml  production_deployment.yaml  production_deployment_guide.md
docs/: ROADMAP.md  conf.py  index.rst
docs/adr/: 0001-project-architecture.md  0002-federated-learning-framework.md  0003-safety-constraints.md  0004-offline-rl-algorithms.md  README.md
examples/: security_validation_demo.py
grid_fed_rl/: __init__.py  cli.py  quick_start.py  version.py
grid_fed_rl/algorithms/: __init__.py  base.py  continual_learning.py  graph_neural.py  multi_agent.py  multi_objective.py  neural_optimization.py  offline.py  physics_informed.py  safe.py  torch_stub.py  uncertainty_aware.py
grid_fed_rl/autonomous/: __init__.py  execution_engine.py  performance_monitor.py  quality_gates.py  research_coordinator.py
grid_fed_rl/benchmarking/: __init__.py  benchmark_suite.py  statistical_analysis.py
grid_fed_rl/controllers/: __init__.py
grid_fed_rl/environments/: __init__.py  base.py  dynamics.py  grid_env.py  power_flow.py  robust_power_flow.py
grid_fed_rl/error_handling/: __init__.py  robust_executor.py
grid_fed_rl/evaluation/: __init__.py
grid_fed_rl/federated/: __init__.py  async_coordinator.py  core.py  privacy.py
grid_fed_rl/feeders/: __init__.py  base.py  ieee_feeders.py  synthetic.py
grid_fed_rl/monitoring/: __init__.py  health_checker.py
grid_fed_rl/optimization/: __init__.py  adaptive_optimizer.py
grid_fed_rl/performance/: __init__.py  auto_scaling_system.py  caching_engine.py  enhanced_parallel_processor.py  monitoring_benchmarking.py  multi_level_cache.py  parallel_processor.py  resource_management.py
grid_fed_rl/research/: __init__.py  example_research_study.py  experiment_manager.py  novel_algorithms.py
grid_fed_rl/utils/: __init__.py  advanced_optimization.py  advanced_robustness.py  advanced_scaling.py  auto_scaling.py  backup_recovery.py  certificate_validation.py  compliance.py  compliance_framework.py  config_validation.py  data_validation_pipelines.py  distributed.py  distributed_tracing.py  enhanced_logging.py  enhanced_monitoring.py  exceptions.py  global_support.py  health_monitoring.py  internationalization.py  logging_config.py  monitoring.py  optimization.py  parallel_environment.py  performance.py  performance_optimization.py  robust_neural_engine.py  robust_validation.py  safety.py  scaling_optimization.py  security.py  security_hardening.py  security_validation.py  validation.py
grid_fed_rl/validation/: __init__.py  input_validation.py
kubernetes/: deployment.yaml  service.yaml
research/: __init__.py  benchmarking_suite.py  comparative_study_1756293953.json  experimental_framework.py  publication_draft_1756293953.json  publication_suite.py  statistical_validation.py
research/publications/: federated_rl_evaluation_1755367946_config.json  federated_rl_evaluation_1755367946_discussion.md  federated_rl_evaluation_1755367946_figure_descriptions.md  federated_rl_evaluation_1755367946_methodology.md  federated_rl_evaluation_1755367946_paper_draft.md  (+3 more)
scripts/: deploy.sh  deploy_production.sh  production_readiness.py
tests/: __init__.py  conftest.py
tests/unit/: test_cli.py  (+1 more)
(+10 files in other folders)
